# auto-wasi

./: Cargo.toml  README.md
src/: lib.rs
tests/: detect.rs
tests/data/: snapshot_0.wasm  snapshot_0.wat  snapshot_1.wasm  snapshot_1.wat
