[package]
name = "auto-wasi"
version = "0.1.0"
authors = ["vlakreeh <zeb@zebulon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
wasi-common = { git = "https://github.com/bytecodealliance/wasmtime", branch = "main" }
wasmparser = "0.71.0"
wasmtime =  { git = "https://github.com/bytecodealliance/wasmtime", branch = "main" }
wasmtime-wasi =  { git = "https://github.com/bytecodealliance/wasmtime", branch = "main" }

[dev-dependencies]
wat = "1.0.31"
