[package]
name = "auto-wasi"
version = "0.1.0"
authors = ["vlakreeh <zeb@zebulon.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
wasi-common = "0.22.0"
wasmparser = "0.71.0"
wasmtime = "0.22.0"
wasmtime-wasi = "0.22.0"

[dev-dependencies]
wat = "1.0.31"
